--- a/api/wtc-ministries/models/wtc-ministries.settings.json
+++ b/api/wtc-ministries/models/wtc-ministries.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "wtc_ministries",
   "info": {
-    "name": "WTC Ministries"
+    "name": "WTC Ministries",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -15,7 +16,7 @@
     }
   },
   "attributes": {
-    "description": {
+    "minitries": {
       "pluginOptions": {
         "i18n": {
           "localized": true
