--- a/api/wtc-articles/models/wtc-articles.settings.json
+++ b/api/wtc-articles/models/wtc-articles.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "wtc_ministries_categories",
+  "collectionName": "wtc_articles",
   "info": {
-    "name": "WTC Ministries Category",
+    "name": "WTC Articles",
     "description": ""
   },
   "options": {
@@ -25,17 +25,8 @@
       "type": "string",
       "required": true
     },
-    "description": {
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      },
-      "type": "text",
-      "required": true
-    },
     "banner": {
-      "model": "file",
+      "collection": "file",
       "via": "related",
       "allowedTypes": [
         "images"
@@ -48,27 +39,41 @@
         }
       }
     },
-    "button_name": {
+    "content": {
       "pluginOptions": {
         "i18n": {
           "localized": true
         }
       },
-      "type": "string",
+      "type": "richtext",
       "required": true
     },
-    "button_link": {
+    "wtc_leaderships": {
+      "collection": "wtc-leadership",
+      "via": "wtc_article"
+    },
+    "wtc_worship_places": {
+      "collection": "wtc-worship-place",
+      "via": "wtc_article"
+    },
+    "gallery": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
       "pluginOptions": {
         "i18n": {
           "localized": false
         }
-      },
-      "type": "string",
-      "required": true
+      }
     },
-    "wtc_articles": {
-      "via": "wtc_ministries_category",
-      "collection": "wtc-articles"
+    "wtc_ministries_category": {
+      "model": "wtc-ministries-category",
+      "via": "wtc_articles"
     }
   }
 }
