--- a/api/wtc-communities/models/wtc-communities.settings.json
+++ b/api/wtc-communities/models/wtc-communities.settings.json
@@ -1,8 +1,9 @@
 {
   "kind": "singleType",
-  "collectionName": "wtc_ministries",
+  "collectionName": "wtc_communities",
   "info": {
-    "name": "WTC Ministries"
+    "name": "WTC Communities",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -46,6 +47,24 @@
           "localized": false
         }
       }
+    },
+    "button_name": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "button_link": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      },
+      "type": "string",
+      "required": true
     }
   }
 }
