--- a/api/wtc-leadership/models/wtc-leadership.settings.json
+++ b/api/wtc-leadership/models/wtc-leadership.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "wtc_leaderships",
   "info": {
-    "name": "WTC Leadership"
+    "name": "WTC Leadership",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -22,7 +23,7 @@
         "images"
       ],
       "plugin": "upload",
-      "required": true,
+      "required": false,
       "pluginOptions": {
         "i18n": {
           "localized": false
@@ -38,7 +39,7 @@
       "type": "string",
       "required": true
     },
-    "bio": {
+    "description": {
       "pluginOptions": {
         "i18n": {
           "localized": true
@@ -47,7 +48,7 @@
       "type": "text",
       "required": true
     },
-    "instagram": {
+    "instagram_name_1": {
       "pluginOptions": {
         "i18n": {
           "localized": false
@@ -55,7 +56,7 @@
       },
       "type": "string"
     },
-    "facebook": {
+    "instagram_link_1": {
       "pluginOptions": {
         "i18n": {
           "localized": false
@@ -63,9 +64,25 @@
       },
       "type": "string"
     },
-    "wtc_page": {
+    "instagram_name_2": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      },
+      "type": "string"
+    },
+    "instagram_link_2": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      },
+      "type": "string"
+    },
+    "wtc_article": {
       "via": "wtc_leaderships",
-      "model": "wtc-page"
+      "model": "wtc-articles"
     }
   }
 }
