--- a/api/wtc-nextgen-category/models/wtc-nextgen-category.settings.json
+++ b/api/wtc-nextgen-category/models/wtc-nextgen-category.settings.json
@@ -1,30 +1,40 @@
 {
   "kind": "collectionType",
-  "collectionName": "wtc_location_areas",
+  "collectionName": "wtc_nextgen_categories",
   "info": {
-    "name": "WTC Location Area"
+    "name": "WTC Nextgen Category"
   },
   "options": {
     "increments": true,
     "timestamps": true,
     "draftAndPublish": true
   },
-  "pluginOptions": {},
+  "pluginOptions": {
+    "i18n": {
+      "localized": true
+    }
+  },
   "attributes": {
     "name": {
-      "type": "string",
-      "required": true
-    },
-    "area": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
       "type": "string",
       "required": true
     },
     "description": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
       "type": "text",
       "required": true
     },
     "wtc_worship_places": {
-      "via": "wtc_location_area",
+      "via": "wtc_nextgen_category",
       "collection": "wtc-worship-place"
     }
   }
