Add Ministri List.

--- a/api/wtc-leadership/models/wtc-leadership.settings.json
+++ b/api/wtc-leadership/models/wtc-leadership.settings.json
@@ -83,6 +83,10 @@
     "wtc_article": {
       "via": "wtc_leaderships",
       "model": "wtc-articles"
+    },
+    "wtc_ministries_list": {
+      "via": "wtc_leaderships",
+      "model": "wtc-ministries-list"
     }
   }
 }
