--- a/api/wtc-worship-place/models/wtc-worship-place.settings.json
+++ b/api/wtc-worship-place/models/wtc-worship-place.settings.json
@@ -25,15 +25,6 @@
       "type": "string",
       "required": true
     },
-    "address": {
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      },
-      "type": "string",
-      "required": true
-    },
     "day": {
       "pluginOptions": {
         "i18n": {
@@ -142,6 +133,15 @@
     "wtc_location_area": {
       "model": "wtc-location-area",
       "via": "wtc_worship_places"
+    },
+    "adress": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "richtext",
+      "required": true
     }
   }
 }
