--- a/api/wtc-about-us/models/wtc-about-us.settings.json
+++ b/api/wtc-about-us/models/wtc-about-us.settings.json
@@ -16,15 +16,6 @@
     }
   },
   "attributes": {
-    "about": {
-      "pluginOptions": {
-        "i18n": {
-          "localized": true
-        }
-      },
-      "type": "richtext",
-      "required": true
-    },
     "vision": {
       "pluginOptions": {
         "i18n": {
@@ -73,6 +64,33 @@
     },
     "wtc_leaderships": {
       "collection": "wtc-leadership"
+    },
+    "about_left": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "richtext",
+      "required": true
+    },
+    "about_right": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "richtext",
+      "required": true
+    },
+    "values": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "text",
+      "required": true
     }
   }
 }
