--- a/api/wtc-landing-page/models/wtc-landing-page.settings.json
+++ b/api/wtc-landing-page/models/wtc-landing-page.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "wtc_landing_pages",
   "info": {
-    "name": "WTC Landing Page"
+    "name": "WTC Landing Page",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -139,6 +140,42 @@
       "required": true
     },
     "youtube_link": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "banner_button_name_1": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "banner_button_name_2": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "banner_button_link_1": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "banner_button_link_2": {
       "pluginOptions": {
         "i18n": {
           "localized": false
