--- a/api/wtc-online-giving/models/wtc-online-giving.settings.json
+++ b/api/wtc-online-giving/models/wtc-online-giving.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "wtc_online_givings",
   "info": {
-    "name": "WTC Online Giving"
+    "name": "WTC Online Giving",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -65,6 +66,24 @@
       "pluginOptions": {
         "i18n": {
           "localized": true
+        }
+      },
+      "type": "richtext",
+      "required": true
+    },
+    "account_name": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "account_detail": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": false
         }
       },
       "type": "richtext",
