--- a/api/wtc-landing-page/models/wtc-landing-page.settings.json
+++ b/api/wtc-landing-page/models/wtc-landing-page.settings.json
@@ -30,7 +30,8 @@
       "model": "file",
       "via": "related",
       "allowedTypes": [
-        "images"
+        "images",
+        "videos"
       ],
       "plugin": "upload",
       "required": true,
