--- a/api/wtc-landing-page/models/wtc-landing-page.settings.json
+++ b/api/wtc-landing-page/models/wtc-landing-page.settings.json
@@ -184,6 +184,42 @@
       },
       "type": "string",
       "required": true
+    },
+    "caption_help": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "caption_socmed": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "caption_location": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
+    },
+    "caption_welcome": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
     }
   }
 }
