Penambahan caption area

--- a/api/wtc-landing-page/models/wtc-landing-page.settings.json
+++ b/api/wtc-landing-page/models/wtc-landing-page.settings.json
@@ -220,6 +220,15 @@
       },
       "type": "string",
       "required": true
+    },
+    "caption_area": {
+      "pluginOptions": {
+        "i18n": {
+          "localized": true
+        }
+      },
+      "type": "string",
+      "required": true
     }
   }
 }
