--- a/api/wtc-ministries-category/models/wtc-ministries-category.settings.json
+++ b/api/wtc-ministries-category/models/wtc-ministries-category.settings.json
@@ -60,7 +60,7 @@
     "button_link": {
       "pluginOptions": {
         "i18n": {
-          "localized": false
+          "localized": true
         }
       },
       "type": "string",
