--- a/api/wtc-landing-page/models/wtc-landing-page.settings.json
+++ b/api/wtc-landing-page/models/wtc-landing-page.settings.json
@@ -89,7 +89,7 @@
     "button_link_2": {
       "pluginOptions": {
         "i18n": {
-          "localized": false
+          "localized": true
         }
       },
       "type": "string",
